Check for no textures or files, improve custom output behaviour

--- a/XBC2ModelDecomp/MainFormTest.xaml
+++ b/XBC2ModelDecomp/MainFormTest.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:XBC2ModelDecomp"
         mc:Ignorable="d"
-        Title="Xenoblade 2 Asset Decompilier" Height="440" Width="550" ResizeMode="CanMinimize">
+        Title="Xenoblade 2 Model Decompilier" Height="440" Width="550" ResizeMode="CanMinimize">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="460"/>
@@ -19,16 +19,16 @@
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
-        <Label Content="Xenoblade 2 Asset Decompilier" HorizontalAlignment="Left" VerticalAlignment="Top" Padding="0" Margin="10,5,0,0" Height="28" Width="520" FontSize="18" FontWeight="Bold" Grid.ColumnSpan="2"/>
+        <Label Content="Xenoblade 2 Model Decompilier" HorizontalAlignment="Left" VerticalAlignment="Top" Padding="0" Margin="10,5,0,0" Height="28" Width="520" FontSize="18" FontWeight="Bold" Grid.ColumnSpan="2"/>
         <Label Content="Decompiles model assets inside the files of Xenoblade 2." HorizontalAlignment="Left" VerticalAlignment="Top" Padding="0" Margin="10,30,0,0" Height="18" Width="520" FontSize="12" Grid.ColumnSpan="2"/>
         <Rectangle HorizontalAlignment="Left" Height="1" Margin="0,53,0,0" Stroke="Black" VerticalAlignment="Top" Width="550" Grid.ColumnSpan="2" />
 
         <Label Content="Input File(s):" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Height="18" Width="65" Padding="0"/>
-        <TextBox x:Name="txtInput" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left" Height="20" Margin="10,23,0,0" MaxLines="1" VerticalAlignment="Top" Width="440"/>
+        <TextBox x:Name="txtInput" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left" Height="20" Margin="10,23,0,0" MaxLines="1" VerticalAlignment="Top" Width="440" IsReadOnly="True" IsReadOnlyCaretVisible="True"/>
         <Button x:Name="btnInput" Content="Browse..." Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" Margin="0,23,0,0" VerticalAlignment="Top" Width="60" Height="20" Click="SelectFile"/>
 
         <Label Content="Output Folder:" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Height="18" Width="80" Padding="0"/>
-        <TextBox x:Name="txtOutput" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Left" Height="20" Margin="10,23,0,0" MaxLines="1" VerticalAlignment="Top" Width="440"/>
+        <TextBox x:Name="txtOutput" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Left" Height="20" Margin="10,23,0,0" MaxLines="1" VerticalAlignment="Top" Width="440" IsReadOnly="True"/>
         <Button x:Name="btnOutput" Content="Browse..." Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" Margin="0,23,0,0" VerticalAlignment="Top" Width="60" Height="20" Click="SelectOutputDir"/>
 
         <CheckBox x:Name="cbxAllFiles" Content="Extract all files in containers" HorizontalAlignment="Left" Margin="10,0,0,0" Grid.Row="3" VerticalAlignment="Top" ToolTip="Any additional files contained in the model's files will be extracted to the output folder."/>
