--- a/XBC2ModelDecomp/MainFormTest.xaml
+++ b/XBC2ModelDecomp/MainFormTest.xaml
@@ -31,9 +31,9 @@
         <TextBox x:Name="txtOutput" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Left" Height="20" Margin="10,23,0,0" MaxLines="1" VerticalAlignment="Top" Width="440" IsReadOnly="True"/>
         <Button x:Name="btnOutput" Content="Browse..." Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" Margin="0,23,0,0" VerticalAlignment="Top" Width="60" Height="20" Click="SelectOutputDir"/>
 
-        <CheckBox x:Name="cbxAllFiles" Content="Extract all files in containers" HorizontalAlignment="Left" Margin="10,0,0,0" Grid.Row="3" VerticalAlignment="Top" ToolTip="Any additional files contained in the model's files will be extracted to the output folder."/>
-        <!--<CheckBox Content="SameRowOption" HorizontalAlignment="Left" Margin="189,0,0,0" Grid.Row="3" VerticalAlignment="Top"/>-->
-        <CheckBox x:Name="cbxFlexes" Content="Export facial flexes" HorizontalAlignment="Left" Margin="10,15,0,0" Grid.Row="3" VerticalAlignment="Top"/>
+        <CheckBox x:Name="cbxTextures" Content="Save textures" ToolTip="Textures will be saved to the Textures folder." IsChecked="True" HorizontalAlignment="Left" Margin="10,0,0,0" Grid.Row="3" VerticalAlignment="Top"/>
+        <CheckBox x:Name="cbxFlexes" Content="Save facial flexes" ToolTip="Facial flexes will be saved to the model file. This makes the file quite large in size!" HorizontalAlignment="Left" Margin="120,0,0,0" Grid.Row="3" VerticalAlignment="Top"/>
+        <CheckBox x:Name="cbxAllFiles" Content="Save all files in containers" ToolTip="All raw files contained in the model's files will be extracted to the RawFiles folder." HorizontalAlignment="Left" Margin="10,15,0,0" Grid.Row="3" VerticalAlignment="Top"/>
         <Button x:Name="btnDecomp" Content="Decompile" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" Margin="0,6,0,0" VerticalAlignment="Top" Width="60" Height="20" Click="DecompileFile"/>
 
         <Label Content="Console Output:" Grid.Column="0" Grid.Row="4" HorizontalAlignment="Left" Margin="10,5,0,-5" VerticalAlignment="Top" Height="18" Width="100" Padding="0"/>
