Add flex basis reading, add LOD and outline export options

--- a/XBC2ModelDecomp/MainFormTest.xaml
+++ b/XBC2ModelDecomp/MainFormTest.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:XBC2ModelDecomp"
         mc:Ignorable="d"
-        Title="Xenoblade 2 Model Decompilier" Height="270" Width="550" ResizeMode="CanMinimize">
+        Title="Xenoblade 2 Model Decompilier" Height="295" Width="550" ResizeMode="CanMinimize">
     <Grid>
         <Label Content="Xenoblade 2 Model Decompilier" HorizontalAlignment="Left" VerticalAlignment="Top" Padding="0" Margin="10,5,0,0" Height="28" Width="520" FontSize="18" FontWeight="Bold" Grid.ColumnSpan="2"/>
         <Label Content="Manipulates model assets inside the files of Xenoblade 2." HorizontalAlignment="Left" VerticalAlignment="Top" Padding="0" Margin="10,30,0,0" Height="18" Width="520" FontSize="12" Grid.ColumnSpan="2"/>
@@ -21,6 +21,7 @@
                         <RowDefinition Height="50"/>
                         <RowDefinition Height="50"/>
                         <RowDefinition Height="45"/>
+                        <RowDefinition Height="45"/>
                     </Grid.RowDefinitions>
 
                     <Label Content="Input File(s):" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Height="18" Width="65" Padding="0"/>
@@ -31,16 +32,19 @@
                     <TextBox x:Name="EXtxtOutput" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left" Height="20" Margin="10,23,0,0" MaxLines="1" VerticalAlignment="Top" Width="440" IsReadOnly="True"/>
                     <Button x:Name="EXbtnOutput" Content="Browse..." Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" Margin="0,23,0,0" VerticalAlignment="Top" Width="60" Height="20" Click="SelectOutputDir"/>
 
-                    <Label Content="Output Format:" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Left" Margin="265,0,0,0" VerticalAlignment="Top" Height="15" Width="84" Padding="0"/>
                     <CheckBox x:Name="EXcbxTextures" Content="Save textures" ToolTip="Textures will be saved to the Textures folder." IsChecked="True" HorizontalAlignment="Left" Margin="10,0,0,0" Grid.Row="2" VerticalAlignment="Top"/>
                     <CheckBox x:Name="EXcbxAnims" Content="Save animations" ToolTip="Animations will be saved to the Animations folder." HorizontalAlignment="Left" Margin="110,0,0,0" Grid.Row="2" VerticalAlignment="Top"/>
+                    <CheckBox x:Name="EXcbxOutlines" Content="Save model outlines" ToolTip="Model outlines will be saved to the mesh file. Outlines are simply duplicates of other meshes." HorizontalAlignment="Left" Margin="220,0,0,0" Grid.Row="2" VerticalAlignment="Top"/>
                     <CheckBox x:Name="EXcbxFlexes" Content="Save facial flexes to model file" ToolTip="Facial flexes will be saved to the model file. This makes the file quite large in size!" HorizontalAlignment="Left" Margin="10,15,0,0" Grid.Row="2" VerticalAlignment="Top"/>
-                    <CheckBox x:Name="EXcbxRawFiles" Content="Save raw files in containers" ToolTip="All raw files contained in the model's files will be extracted to the RawFiles folder." HorizontalAlignment="Left" Margin="10,30,0,0" Grid.Row="2" VerticalAlignment="Top"/>
+                    <CheckBox x:Name="EXcbxRawFiles" Content="Save raw files in containers" ToolTip="All raw files contained in the model's files will be extracted to the RawFiles folder." HorizontalAlignment="Left" Margin="200,15,0,0" Grid.Row="2" VerticalAlignment="Top"/>
 
-                    <ComboBox Grid.Column="0" Grid.Row="2" Margin="350,0,0,0" Width="100" Height="15" Padding="2,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
+                    <Label Content="Output Format:" Grid.Column="0" Grid.Row="3" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Height="15" Width="85" Padding="0"/>
+                    <ComboBox x:Name="EXdropFormat" Grid.Column="0" Grid.Row="3" Margin="95,0,0,0" Width="100" Height="15" Padding="2,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
                         <ComboBoxItem Content="XNALara"/>
                         <ComboBoxItem Content="glTF"/>
                     </ComboBox>
+                    <Label Content="Level of Detail:" Grid.Column="0" Grid.Row="3" HorizontalAlignment="Left" Margin="272,0,0,0" VerticalAlignment="Top" Height="15" Width="78" Padding="0"/>
+                    <Slider x:Name="EXsldLOD" Grid.Column="0" Grid.Row="3" Margin="350,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Maximum="3" SmallChange="1" Value="1" Width="100" TickPlacement="BottomRight" Height="30" AutoToolTipPlacement="TopLeft" ValueChanged="EXsldLOD_ValueChanged"/>
 
                     <Button x:Name="EXbtnExtract" Content="Extract" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" Margin="0,6,0,0" VerticalAlignment="Top" Width="60" Height="20" Click="ExtractFile"/>
                 </Grid>
@@ -48,7 +52,7 @@
             <TabItem x:Name="tabConsole" Header="Console">
                 <Grid>
                     <Label Content="Console Output:" HorizontalAlignment="Left" Margin="10,5,0,-5" VerticalAlignment="Top" Height="18" Width="100" Padding="0"/>
-                    <TextBox x:Name="txtConsole" BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="120" Margin="10,24,0,0" VerticalAlignment="Top" Width="509" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto" UseLayoutRounding="False" AllowDrop="False" IsTabStop="False" IsReadOnly="True" IsUndoEnabled="False" TextWrapping="Wrap"/>
+                    <TextBox x:Name="txtConsole" BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="145" Margin="10,24,0,0" VerticalAlignment="Top" Width="509" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto" UseLayoutRounding="False" AllowDrop="False" IsTabStop="False" IsReadOnly="True" IsUndoEnabled="False" TextWrapping="Wrap"/>
                 </Grid>
             </TabItem>
         </TabControl>
