--- a/XBC2ModelDecomp/MainFormTest.xaml
+++ b/XBC2ModelDecomp/MainFormTest.xaml
@@ -36,6 +36,7 @@
                     <CheckBox x:Name="EXcbxAnims" Content="Save animations" ToolTip="Animations will be saved to the Animations folder." HorizontalAlignment="Left" Margin="110,0,0,0" Grid.Row="2" VerticalAlignment="Top"/>
                     <CheckBox x:Name="EXcbxOutlines" Content="Save model outlines" ToolTip="Model outlines will be saved to the mesh file. Outlines are simply duplicates of other meshes." HorizontalAlignment="Left" Margin="220,0,0,0" Grid.Row="2" VerticalAlignment="Top"/>
                     <CheckBox x:Name="EXcbxFlexes" Content="Save facial flexes to model file" ToolTip="Facial flexes will be saved to the model file. This makes the file quite large in size!" HorizontalAlignment="Left" Margin="10,15,0,0" Grid.Row="2" VerticalAlignment="Top"/>
+                    <CheckBox x:Name="EXcbxPropPositions" Content="Save prop positions" ToolTip="The positions of props will be saved to the file. XNALara has no concept of object location, so you cannot move it back to the origin." IsChecked="True" HorizontalAlignment="Left" Margin="195,15,0,0" Grid.Row="2" VerticalAlignment="Top"/>
 
                     <Label Content="Output Format:" Grid.Column="0" Grid.Row="3" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Height="15" Width="85" Padding="0"/>
                     <ComboBox x:Name="EXdropFormat" Grid.Column="0" Grid.Row="3" Margin="95,0,0,0" Width="100" Padding="2,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" SelectedIndex="2">
